feat: implement initial project architecture and core features including RAG, AI chat, and user management modules. V2.0